# Project-Django

wallet/: mkdocs.yml  pyproject.toml
wallet/docs/: index.md
wallet/wallet/core/: admin.py  models.py  urls.py  views.py
wallet/wallet/core/migrations/: 0001_initial.py  0002_alter_bitcoin_quantidade.py  0003_remove_bitcoin_descricao_remove_bitcoin_nome.py
wallet/wallet/core/templates/core/: base.html  bitcoin.html  carteira.html  dashboard.html  dashboard1.html  investimentos.html
wallet/wallet/wallet/: settings.py
