[tool.poetry]
name = "wallet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
ruff = "^0.0.256"
taskipy = "^1.10.3"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.3"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
